# norlab_controllers_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
launch/: husky_mpc_launch.xml  husky_realtime_control_launch.xml  marmotte_mpc_launch.xml  marmotte_realtime_control_launch.xml  realtime_control_launch.xml  warthog_mpc_launch.xml  warthog_realtime_control_launch.xml
norlab_controllers_inspector/: package.xml  setup.cfg  setup.py
norlab_controllers_inspector/PathFollowingAnalysis/: main.ipynb  main.py
norlab_controllers_inspector/norlab_controllers_inspector/: inspector_node.py
norlab_controllers_msgs/: CMakeLists.txt  package.xml
norlab_controllers_msgs/action/: FollowPath.action
norlab_controllers_msgs/msg/: FollowerOptions.msg
norlab_controllers_msgs/srv/: ExportData.srv
norlab_controllers_ros/: controller_node.py
norlab_controllers_wrapper/: CMakeLists.txt  package.xml
norlab_controllers_wrapper/launch/: controller.launch.py  husky_mpc_launch.xml  husky_ortexp_launch.xml  husky_realtime_control_launch.xml  marmotte_mpc_launch.xml  marmotte_ortexp_launch.xml  marmotte_realtime_control_launch.xml  warthog_mpc_launch.xml  warthog_realtime_control_launch.xml  warthog_tracks_mpc_launch.xml  warthog_tracks_orthexp_launch.xml  warthog_wheels_mpc_launch.xml  warthog_wheels_orthexp_launch.xml
norlab_controllers_wrapper/params/: general.yaml  husky-ideal-diff-drive-mpc.yaml
norlab_controllers_wrapper/params/husky/: differential-orthexp.yaml
norlab_controllers_wrapper/params/husky/grass/: ideal-diff-drive-mpc.yaml  rotation-p.yaml
norlab_controllers_wrapper/params/husky/snow/: ideal-diff-drive-mpc.yaml
norlab_controllers_wrapper/params/marmotte/: differential-orthexp.yaml
norlab_controllers_wrapper/params/marmotte/snow/: ideal-diff-drive-mpc.yaml  rotation-p.yaml
norlab_controllers_wrapper/params/warthog_tracks/snow/: ideal-diff-drive-mpc.yaml
norlab_controllers_wrapper/params/warthog_wheels/: differential-orthexp.yaml
norlab_controllers_wrapper/params/warthog_wheels/snow/: ideal-diff-drive-mpc.yaml
norlab_controllers_wrapper/scripts/: controller_node.py
params/: husky-differential-orthexp.yaml  husky-mpc.yaml  marmotte-differential-orthexp.yaml  marmotte-ideal-diff-drive-mpc.yaml  marmotte-mpc.yaml  warthog-differential-orthexp.yaml  warthog-ideal-diff-drive-mpc.yaml  warthog-mpc.yaml  warthog-rotation-p.yaml
scripts/: controller_node.py
