<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>norlab_controllers_inspector</name>
  <version>0.0.0</version>
  <description>Inspector for robot controllers, evaluating their accuracy</description>
  <maintainer email="cygof@ulaval.ca">Cyril</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>norlab_controllers_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pandas</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
 
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
