<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>norlab_controllers_wrapper</name>
  <version>0.0.1</version>
  <description>ROS 2 wrapper for norlab_controllers</description>
  <maintainer email="dominic.baril@norlab.ulaval.ca">Dominic Baril</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>norlab_controllers_msgs</exec_depend>
  <!-- <depend>norlab_controllers</depend> -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>